[project]
name = "bud"
version = "1.0.0"
description = "A simple bot to log and anwser questions from slack"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bud"]
